chore: use List.of where possible if only one argument is passed